--- a/stedcs/src/App.css
+++ b/stedcs/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -41,6 +35,20 @@ input {
   color: #61dafb;
 }
 
+.Student {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem;
+  padding: 1rem;
+  border: 1px;
+  border-radius: 0.5rem;
+  color: #a1a1a1;
+  font-size: 1.5rem;
+  font-family: var(--font-raleway);
+  font-weight: 500;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
