added autocomplete with formatting

--- a/stedcs/src/App.css
+++ b/stedcs/src/App.css
@@ -19,6 +19,9 @@
   color: white;
 }
 
+.search {
+  color: #a1a1a1;
+}
 input {
   border: none;
   font-size: 3rem;
@@ -58,6 +61,18 @@ input {
   margin: 1rem;
   padding: 1rem;
   border: 1px;
+  border-radius: 0.5rem;
+  color: #a1a1a1;
+  font-size: 3rem;
+  font-family: var(--font-raleway);
+  font-weight: 500;
+}
+
+.Document-saved {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: left;
   border-radius: 0.5rem;
   color: #a1a1a1;
   font-size: 3rem;
