--- a/stedcs/src/App.css
+++ b/stedcs/src/App.css
@@ -18,17 +18,23 @@
   font-family: 'Times New Roman', Times, serif;
   color: white;
 }
+.Prompt {
+  font-size: 3rem;
+  font-family: var(--font-raleway);
+  font-weight: 500;
+  color: #a1a1a1;
 
+}
 .search {
   color: #a1a1a1;
 }
+
 input {
   border: none;
   font-size: 3rem;
   font-family: var(--font-raleway);
   font-weight: 500;
   padding-right: 1rem;
-
   outline: none;
   color: #a1a1a1;
   background: #1f2123;
@@ -66,6 +72,21 @@ input {
   font-size: 3rem;
   font-family: var(--font-raleway);
   font-weight: 500;
+}
+.Document {
+  font-size: 20px;
+}
+
+button {
+  background-color: black; /* Green */
+  height: 50px;
+  border: none;
+  color: white;
+  padding: 15 px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
 
 .Document-saved {
