added formatting to buttons

--- a/stedcs/src/App.css
+++ b/stedcs/src/App.css
@@ -62,8 +62,7 @@ input {
 }
 
 .Document {
-  display: flex;
-  flex-direction: column;
+
   align-items: left;
   justify-content: left;
   margin: 1rem;
@@ -79,18 +78,6 @@ input {
   font-size: 20px;
 }
 
-button {
-  background-color: black; /* Green */
-  height: 50px;
-  border: none;
-  color: white;
-  padding: 15 px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-
 .Document-saved {
   display: flex;
   flex-direction: column;
@@ -101,4 +88,51 @@ button {
   font-size: 3rem;
   font-family: var(--font-raleway);
   font-weight: 500;
+}
+
+.button-primary {
+  align-items: center;
+  background-color: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: rgba(0, 0, 0, 0.85);
+  cursor: pointer;
+  display: inline-flex;
+  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0;
+  min-height: 3rem;
+  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+}
+
+.button-primary:hover,
+.button-primary:focus {
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  color: rgba(0, 0, 0, 0.65);
+}
+
+.button-primary:hover {
+  transform: translateY(-1px);
+}
+
+.button-primary:active {
+  background-color: #F0F0F1;
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+  color: rgba(0, 0, 0, 0.65);
+  transform: translateY(0);
 }
